Closed
Bug 488690
Opened 17 years ago
Closed 16 years ago
"Assertion failure: dn->pn_defn, at ../jsemit.cpp"
Categories
(Core :: JavaScript Engine, defect, P1)
Core
JavaScript Engine
Tracking
()
VERIFIED
FIXED
mozilla1.9.2a1
People
(Reporter: gkw, Assigned: brendan)
References
Details
(4 keywords, Whiteboard: fixed-in-tracemonkey)
Attachments
(1 file)
946 bytes,
patch
|
mrbkap
:
review+
|
Details | Diff | Splinter Review |
for each (let NaN in [x])
for(let x = (x for ([] in false)) in false);
asserts dbg js shell without -j at Assertion failure: dn->pn_defn, at ../jsemit.cpp:1946
autoBisect shows this is probably related to bug 488015 :
The first bad revision is:
changeset: 27205:78a21b8efe1b
user: Brendan Eich
date: Wed Apr 15 01:57:13 2009 -0700
summary: Bug 488015 - Crash [@ js_GetUpvar ] (also bogus JS errors, also probably Crash [@js_Interpret]) (future r=mrbkap, see bug).
Flags: blocking1.9.1?
Comment 1•17 years ago
|
||
Does this block b4 if it's fallout from the upvar fix?
![]() |
Assignee | |
Comment 2•17 years ago
|
||
I'll fix it.
/be
Assignee: general → brendan
Status: NEW → ASSIGNED
OS: Mac OS X → All
Priority: -- → P1
Hardware: x86 → All
Target Milestone: --- → mozilla1.9.1b4
Updated•17 years ago
|
Flags: blocking1.9.1? → blocking1.9.1+
![]() |
Reporter | |
Comment 3•16 years ago
|
||
eval("(function(){\
let (x = x.prototype ((\
x for each (NaN in [])\
)\
[function(){}]\
)) {}\
})()");
asserts debug js shell without -j in a similar way - Assertion failure: pn_defn, at ../jsparse.h:654
I'm guessing this is the same bug, else a new one should be filed.
![]() |
Assignee | |
Comment 4•16 years ago
|
||
Gary: generator expressions in let binding constructs should not be filed as new bugs. We have enough on file! :-/
/be
![]() |
Assignee | |
Comment 5•16 years ago
|
||
This logic was just wrong: placeholders starting before the comprehension expr must be split. It also needed consolidation.
/be
Attachment #373747 -
Flags: review?(mrbkap)
Updated•16 years ago
|
Attachment #373747 -
Flags: review?(mrbkap) → review+
![]() |
Assignee | |
Comment 6•16 years ago
|
||
Whiteboard: fixed-in-tracemonkey
![]() |
Assignee | |
Updated•16 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Comment 10•16 years ago
|
||
Keywords: fixed1.9.1
![]() |
Reporter | |
Updated•16 years ago
|
Flags: in-testsuite?
Comment 11•16 years ago
|
||
Verified fixed with given testcases and the following debug builds:
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.2a1pre)
Gecko/20090522 Minefield/3.6a1pre ID:20090522133810
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9.1pre)
Gecko/20090522 Shiretoko/3.5pre ID:20090522153422
Status: RESOLVED → VERIFIED
Keywords: fixed1.9.1 → verified1.9.1
Target Milestone: mozilla1.9.1b4 → mozilla1.9.2a1
You need to log in
before you can comment on or make changes to this bug.
Description
•