Bug 488690 - "Assertion failure: dn->pn_defn, at ../jsemit.cpp" (r=mrbkap).